--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+/* Fontes */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Oswald:wght@200&display=swap');
 
+/* Paleta de cores */
 :root { 
 --color1: #000008;
 --color2: #112a50;
@@ -8,149 +10,7 @@
 --color5: #d6d1ff;
 }
 
-body {
-  font-family: 'Open Sans';
-  font-size: 1.0em;
-}
-
-h1, h2, h3 {
-    font-family: 'Oswald';
-    font-weight: bold;
-    font-size:1.7em;
-}
-
-header img {
-  border-radius: 50%;
-  max-width: 150px;
-}
-
-#ProfileImage{
-    display: flex;
-    justify-content: center;
-}
-  
-#DongarraImage{
-    border-radius: 50%;
-    max-width: 65%;
-    border: 2px solid black;
-    filter: grayscale(100%);
-}
-
-#LeftRow{
-    height: 99.5%;
-    background-color: var(--color4);
-    box-shadow: 3px 3px 10px black;
-    border: solid black 1px;
-    border-radius: 10px;
-}
-
-#Experience{
-  border: solid black 1px;
-  border-radius: 10px;
-  height: 55%;
-  margin-bottom: 1%;
-  background-color: var(--color5);
-  font-size:medium;
-  line-height: 1em;
-}
-
-#FooterBox {
-  border: solid black 1px;
-  border-radius: 10px;
-  box-shadow: 3px 3px 10px black;
-  background-color: var(--color5);
-  height: 20%;
-  float: right;
-  margin-left: 1%;
-  margin-top: 1%;
-}
-
-#Footer{
-  text-align: center;
-  background-size: cover;
-  background-position: fixed;
-  color: black;
-  border: solid black 1px;
-  border-radius: 10px;
-  height: 93%;
-  background-color: var(--color5);
-}
-
-#Education{
-  border: solid black 1px;
-  border-radius: 10px;
-  height: 37%;
-  margin-right: 1.75%;
-  background-color: var(--color5);
-}
-
-#TechnicalKnowledge{
-  border: solid black 1px;
-  border-radius: 10px;
-  height: 37%;
-  margin-left: 1.75%;
-  background-color: var(--color5);
-}
-
-#BodyBox {
-    float: right;
-    box-shadow: 3px 3px 10px black;
-    border-radius: 10px;
-    height: 75%;
-    background-color: var(--color5);
-}
-
-.card{
-  padding: 1%;
-  width: 90%;
-  box-shadow: 0 0 5px 0px black;
-  position: relative;
-  height: 8%;
-  font-size: small;
-}
-
-.card:after,
-.card:before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  transition: transform .3s ease-in-out;
-}
-
-.card:before{
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-  transform: scaleY(0);
-}
-
-.card::after{
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
-  transform: scaleX(0);
-}
-
-.card:hover:before {
-  transform: scaleY(1);
-}
-
-.card:hover:after {
-  transform: scaleX(1);
-}
-
-html, body { height: 100%; }.container {
-  padding: 2px;
-  max-width: 1400px;
-  max-height: 1050px;
-  width: 98%;
-  min-width: 350px;
-  height: 98%;
-  margin:auto;
-  border-radius:1%;
-}
-
+/* Desktop Layout */
 .col1, .col2, .col3, .col4, .col5, .col6, .col7, .col8, 
 .col9, .col10, .col11, .col13, .col14, .col15, .col16 {
   float: left;
@@ -187,7 +47,7 @@ html, body { height: 100%; }.container {
 }
 
 .col8{
-  width: 46%;
+  width: 45.7%;
 }
 
 .col9{
@@ -208,7 +68,7 @@ html, body { height: 100%; }.container {
 }
 
 .col13{
-  width: 77.75%;
+  width: 74%;
   height: 100%;
 }
 
@@ -225,28 +85,144 @@ html, body { height: 100%; }.container {
 
 }
 
-.fab {
-  border: 1px solid white;
+body {
+  font-family: 'Open Sans';
+  font-size: 1em;
+}
+
+h1, h2, h3, h4 {
+  font-family: 'Oswald';
+  font-weight: bold;
+  font-size:1.7em;
+}
+
+#profileImage{
+  display: flex;
+  justify-content: center;
+}
+
+#dongarraImage{
   border-radius: 50%;
-  font-size: 200%;
-  width: 1.5em;
-  height: 1.5em;
-  line-height: 1.5em;
-  margin: 5px;
+  max-width: 65%;
+  border: 1px solid black;
+  filter: grayscale(100%);
+}
+
+#leftRow{
+  height: 194.5%;
+  background-color: var(--color4);
+  box-shadow: 5px 5px 10px black;
+  border: solid black 1px;
+  border-radius: 10px;
+  min-width: 190px;
+}
+
+#experience{
+  border: solid black 1px;
+  border-radius: 10px;
+  height: 55%;
+  margin-bottom: 1%;
+  background-color: var(--color5);
+  font-size:medium;
+  line-height: 1em;
+}
+
+#education{
+  border: solid black 1px;
+  border-radius: 10px;
+  height: 40%;
+  margin-right: 1.75%;
+  background-color: var(--color5);
+}
+
+#awards{
+  border: solid black 1px;
+  border-radius: 10px;
+  height: 40%;
+  margin-left: 1.75%;
+  background-color: var(--color5);
+}
+
+#footerBox {
+  border: solid black 1px;
+  border-radius: 10px;
+  box-shadow: 3px 3px 10px black;
+  background-color: var(--color5);
+  height: 23%;
+  float: right;
+  margin-left: 1%;
+  margin-top: 1%;
+}
+
+#footer{
   text-align: center;
+  background-size: cover;
+  background-position: fixed;
+  color: black;
+  border: solid black 1px;
+  border-radius: 10px;
+  height: 87%;
+  background-color: var(--color5);
 }
 
-a .fab {
-  color: white;
+#bodyBox {
+  float: right;
+  box-shadow: 3px 3px 10px black;
+  border-radius: 10px;
+  height: 165%;
+  background-color: var(--color5);
 }
 
-.PersonalInfo {
-  float: left;
+:not(div, p, h1, h2, h3, h4, ul, i, a, li){
+  background-color: var(--color2);
 }
 
+a, a:visited, a:active {
+  color: inherit;
+}
+
+a:hover{
+  color: blue;
+}
+
+.course{
+  font-weight: bold;
+}
+
+.copyright{
+  font-size: small;
+}
+
+html, body { height: 100%; }.container {
+  max-width: 1500px;
+  max-height: 1200px;
+  min-width: 350px;
+  padding: 2px;
+  width: 98%;
+  height: 98%;
+  margin:auto;
+  border-radius:1%;
+}
+
+.card{
+  padding: 1%;
+  width: 90%;
+  height: 8%;
+  font-size: small;
+  border: solid black 1px;
+  box-shadow: 0px 0px 10px black;
+  position: relative;
+  transition: all .2s ease-in-out;
+}
+ 
+.card:hover{
+  transform: scale(1.05);
+  border: solid black 2px;
+}
+
+/* Tablet Layout */
 @media screen and (max-width: 959px) {
-
-  .col1_md .col2_md .col3_md .col4_md .col5_md .col6_md .col7_md .col8_md 
+.col1_md .col2_md .col3_md .col4_md .col5_md .col6_md .col7_md .col8_md 
 .col9_md .col10_md, .col11_md, .col12_md, .col13_md, .col14_md, .col15_md, .col16_md {
   float: left;
   padding: 1%;
@@ -319,37 +295,39 @@ a .fab {
 
 }
 
-#BodyBox{
-  height: 78%;
+#bodyBox{
+  height: 227%;
 }
 
-#LeftRow{
-  height: 78%;
+#leftRow{
+  height: 227%;
 }
 
-#Experience{
-  height: 31.4%;
-  line-height: 1.5vh;
+#experience{
+  height: 70%;
+  line-height: 3.9vh;
+  font-size: 80%;
+  max-height: 720px;
 }
 
-#Education{
-  height: 10%;
+#education{
+  height: 25%;
   margin-bottom: 1%;
 }
 
-#TechnicalKnowledge{
-  height: 25%;
+#awards{
+  height: 19.5%;
   margin-left: 0%;
   margin-bottom: 1%;
 }
 
-#FooterBox{
-  height: 20%;
+#footerBox{
+  height: 25%;
 }
 
 }
 
-
+/* Mobile Layout */
 @media screen and (max-width: 647px) {
 
   .col1_sm .col2_sm .col3_sm .col4_sm .col5_sm .col6_sm .col7_sm .col8_sm 
@@ -425,13 +403,15 @@ a .fab {
 
   }
 
-  .card{
-    -webkit-margin-before: 0.5em;
-    -webkit-margin-after: 0.5em;
+  #leftRow{
+    height:150%;
   }
 
-  #Experience{
-    font-size: 75%;
-    line-height: 1.0em;
+  #experience{
+    height:50%;
+  }
+
+  #awards{
+    height:21%;
   }
 }
