--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
+html, body{
+    /*background-color: #ff8c00;*/
+    background-color: #2e2e2e;
+}
+.card{
+    margin-top: 10px;
+    background-color: black;
+    border-radius: 2rem;
+}
+.card-body{
+ background-color: black;
+ border-radius: 2rem;
+}
+.card-title{
+    color: #9bbc56;
+}
+.card-text{
+    color: #00ff00;
+}
+
 img{
-    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    text-align: center;
+    max-width: 75%;
 }
