--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
 html, body{
     /*background-color: #ff8c00;*/
     background-color: #2e2e2e;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
+
 .card{
     margin-top: 10px;
     background-color: black;
     border-radius: 2rem;
+    max-width: 100%;
 }
 .card-body{
  background-color: black;
  border-radius: 2rem;
+ max-width: 100%;
 }
 .card-title{
     color: #9bbc56;
@@ -24,4 +30,24 @@ img{
     display: block;
     text-align: center;
     max-width: 75%;
+    filter: brightness(150%);
+}
+
+.d-block{
+    padding: 0;
+    margin: 0;
+}
+
+.img-thumbnail{
+    background-color: black;
+    border-color: black;
+}
+
+footer{
+    background-color: bisque;
+    margin: 0;
+    padding: 0;
+}
+i{
+    font-size: 200%;
 }
