--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html, body{
     background-color: #2e2e2e;
     width: 100%;
     margin: 0;
+    margin-top: 0.5%;
     padding: 0;
 }
 
@@ -24,13 +25,20 @@ a{
     color:tomato;
 }
 
-i{
-    font-size: 150%;
+.footerIcon{
+    font-size: 1.5rem;
 }
 
-i:hover{
+.footerIcon:hover{
     animation: growIcons 1s;
     animation-fill-mode: forwards;
+}
+
+h4, h5{
+    font-family: "Lato", sans-serif;
+}
+p, table{
+    font-family: "Play", sans-serif;
 }
 
 .container-fluid, .col-2, .col-3{
@@ -42,13 +50,16 @@ footer{
     background-color: bisque;
     margin-top: 10%;
 }
+footer > .row{
+    padding: 0.5%;
+}
 
 /* Estilizaçãpo cards*/
 .card{
-    margin-top: 10px;
     background-color: black;
     border-radius: 2rem;
     max-width: 100%;
+    margin-bottom: 1%;
 }
 
 .card-body{
@@ -120,6 +131,9 @@ footer{
     color: white;
  }
 
+ .accordion{
+    margin-top: 1%;
+ }
  .accordion-button{
      background-color: black;
      color: white;
